--- a/home.html
+++ b/home.html
@@ -14,13 +14,13 @@
     <div id="topinfo">
         <ul>
             <li>
-                <p>Working hours: Mon-Fri(8.30-18.00) - Sat(9.00-13.00) Sun and Bank Holidays (Closed)</p>
+                <p>Working hours: Mon-Fri (8.30-18.00) - Sat (9.00-13.00) Sun and Bank Holidays (Closed)</p>
             </li>
-            <li><img src="C:\Users\Alex\Desktop\trial\assets\Email-icon@1x.png"></li>
+            <li><img src="assets/Email-icon.svg"></li>
             <li>
                 <p>workshop@email.com</p>
             </li>
-            <li><img src="C:\Users\Alex\Desktop\trial\assets\phone-icon@1x.png"></li>
+            <li><img src="assets/phone-icon.svg"></li>
             <li>
                 <p></p>0208 544 2734</p>
             </li>
