--- a/home.html
+++ b/home.html
@@ -16,11 +16,11 @@
             <li>
                 <p>Working hours: Mon-Fri (8.30-18.00) - Sat (9.00-13.00) Sun and Bank Holidays (Closed)</p>
             </li>
-            <li><img src="assets/Email-icon.svg"></li>
+            <li><img class="emailIcon" src="assets/Email-icon.svg"></li>
             <li>
                 <p>workshop@email.com</p>
             </li>
-            <li><img src="assets/phone-icon.svg"></li>
+            <li><img class="phoneIcon" src="assets/phone-icon.svg"></li>
             <li>
                 <p></p>0208 544 2734</p>
             </li>
@@ -58,8 +58,8 @@
         <div id="formContainer">
             <form>
                 <h3>BOOK AN APPOINTMENT</h3><br>
-                <input type="text" placeholder="Name"><br>
-                <input type="text" placeholder="Email"><br>
+                <input type="text" placeholder=" Name"><br>
+                <input type="text" placeholder=" Email"><br>
                 <select>
                         <option value="Mercedes">Mercedes</option>
                         <option value="Lamborghini">Lamborghini</option>
